k8s/kustomize/base/deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: oms-deployment
spec:
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxSurge: 1
      maxUnavailable: 25%
  selector:
    matchLabels:
      app: base-service
  template:
    spec:
      restartPolicy: Always
      containers:
        - name: oms-container
          image: IMAGE_PLACEHOLDER
          resources:
            limits:
              memory: 1Gi
              cpu: 500m
            requests:
              memory: 512Mi
              cpu: 150m
#          imagePullPolicy: IfNotPresent
          imagePullPolicy: Always
          ports:
            - containerPort: 8080
          readinessProbe:
            httpGet:
              path: /
              port: 8080
            initialDelaySeconds: 10
            periodSeconds: 5
            successThreshold: 1
