k8s/kustomize/base/service.yml
apiVersion: v1
kind: Service
metadata:
  name: oms-service
spec:
  selector:
    app: base-service
  type: NodePort
  ports:
    - name: http
      port: 80
      protocol: TCP
      targetPort: 8080
