k8s/kustomize/base/ingress.yml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: oms-ingress
spec:
  backend:
    serviceName: oms-service
    servicePort: 80
